# suunto_aggregate

./: .gitignore  README.md  pyproject.toml
suunto_aggregate/: Main.py
