[tool.poetry]
name = "suunto_aggregate"
version = "0.1.0"
description = ""
authors = ["Benjamin Delahais <delahais.b@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.13.0"
matplotlib = "^3.5.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
